--- a/index.html
+++ b/index.html
@@ -1,9 +1,152 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial scale=1.0">
+        <title></title>
     </head>
     <body>
+        <article>
+            <h2>CORONAVIRUS | News</h2>
+            <h1>A new COVID-19 side effect? Some patients are developing sudden onset diabetes</h1>
+            <address>
+                <div>
+                    <img src="https://www.ctvnews.ca/polopoly_fs/1.4243904.1546897733!/httpImage/image.jpg_gen/derivatives/box_45/image.jpg">
+                    <p><strong><a href="https://www.ctvnews.ca/ctv-national-team/avis-favaro-1.814855">Avis Favoro</a></strong> Medical Correspondent, CTV National News<br>
+                    <a href="https://twitter.com/ctv_avisfavaro" target="_blank">@ctv_avisfavoro</a> | <a href="https://www.ctvnews.ca/ctv-national-team/avis-favaro-1.814855?contactForm=true">Contact</a></p>   
+                </div>
+                <div>
+                    <img src="https://www.ctvnews.ca/polopoly_fs/1.2736441.1452730568!/httpImage/image.jpg_gen/derivatives/box_45/image.jpg">
+                    <p><strong><a href="https://www.ctvnews.ca/elizabeth-st-philip-1.2736435">Elizabeth St. Philip</a></strong> CTV News<br>
+                    <a href="https://twitter.com/LizTV" target="_blank">@LizTV</a> | <a href="https://www.ctvnews.ca/elizabeth-st-philip-1.2736435?contactForm=true">Contact</a></p>   
+                </div>
+                <div>
+                    <img src="https://www.ctvnews.ca/polopoly_fs/1.4635808.1600220049!/httpImage/image.jpg_gen/derivatives/box_45/image.jpg">
+                    <p><strong><a href="https://www.ctvnews.ca/more/ctvnews-ca-team/alexandra-mae-jones-1.4576735">Alexandra Mae Jones</a></strong> CTVNews.ca writer<br>
+                    <a href="https://twitter.com/AlexandraMaeJ" target="_blank">@AlexandraMaeJ</a> | <a href="https://www.ctvnews.ca/more/ctvnews-ca-team/alexandra-mae-jones-1.4576735?contactForm=true">Contact</a></p>   
+                </div>
+            </address>
+            <p><small>Saturday, March 13, 2021 10:07PM EST<br>
+            Last Updated Monday, March 15, 2021 9:23AM EDT</small></p>
+            
+            <iframe src="https://webapps.9c9media.com/vidi-player/1.9.18/share/iframe.html?currentId=2160231&config=ctvnews/share.json&kruxId=&rsid=bellmedianewsprod,bellmediaglobalprod&siteName=CTVNews&cid=%5B%7B%22contentId%22%3A2160231%2C%22ad%22%3A%7B%22adsite%22%3A%22ctv.ctvnews%22%2C%22adzone%22%3A%22embed%22%7D%7D%5D" width="560" height="315"frameborder="0" allowfullscreen></iframe>
+            <p>TORONTO -- Among all the manifestations and complications of COVID-19, yet another 
+            puzzling question is emerging — is the virus triggering cases of diabetes?</p>
+            <p>Like many doctors around the world, Dr. Mihail Zilbermint began noticing 
+            something strange midway in the pandemic.</p>
+            <p>More and more people seemed to be suddenly developing diabetes.</p>
+
+            <p><q>My team usually manage about 16 to 17, or 18 patients with diabetes per day,</q>
+            Zilbermint told CTV News. <q>And our numbers increased up to 30 per day.</q></p>
+            <p>Zilbermint is an endocrinologist and an associate professor with Johns Hopkins 
+            School of Medicine in Maryland. The sudden change was surprising, he said, and worrying.</p>
+            <ul>
+                <li><b><a href="https://www.ctvnews.ca/newsletters/the-covid19-brief-newsletter-signup">
+                Newsletter sign-up: Get The COVID-19 Brief sent to your inbox</a></b></li>
+            </ul>
+            <p>A diagnosis of diabetes was also a shock to John Kunkel, who lives in Arkansas, 
+            and had just recovered from a serious case of COVID-19 when he discovered his pancreas 
+            had stopped making enough insulin, forcing him into daily blood sugar testing, 
+            and metformin to manage his diabetes.</p>
+            <p>Kunkel tested positive for COVID-19 at the end of June 2020.</p>
+            <p>He texted his doctor immediately after realizing that he had lost his sense of taste. 
+            By the time he arrived at the doctor’s office, he already had a fever of 101 degrees.</p>
+            <p><q>By 7:30 that night I was in the emergency room with 103.5 fever,</q> 
+            he said. <q>So I went from really losing my taste at 11 o'clock, being in 
+            the hospital at night with a very high fever.</q></p>
+            <p>His fever was worryingly high for almost two weeks straight. He was in the 
+            emergency room five times.</p>
+            <p>In July, things took a turn for the worse during his recovery.</p>
+            <p><q>I'll never forget the day,</q> he said. <q>It was July 30 when I had bloodwork done.</q></p>
+            <p>When his results came back, it was clear there was a problem with his blood sugar.</p>
+            <p><q>So it's like, “hey, you've got diabetes, we've got to start treating it immediately,” 
+            because it was so high,</q> Kunkel said.</p>
+            <p><q>A lot of it was, you know — why? I didn't have it before. And it was the big question 
+            that all the doctors would give is, they really don't know.”</q></p>
+            <p>Doctors around the world are now sharing similar case reports of sudden onset diabetes 
+            after COVID-19 infection, finding that the link is strongest among patients who were 
+            hospitalized with the virus.</p>
+            <p><q>We clearly see people without previous diabetes developing diabetes,</q> 
+            Dr. Remi Rabasa-Lhoret, with the Montreal Clinical Research Institute, told CTV News. 
+            <q>It is highly probable that COVID-19 is triggering the disease.</q></p>
+            <p>Studies suggest that <a href="https://dom-pubs.onlinelibrary.wiley.com/doi/10.1111/dom.14269">
+            up to 14 per cent of COVID-19 patients may develop sudden onset diabetes.</a></p>
+            <p><q>We've seen this with influenza and other infections […] but the magnitude of what we see with 
+            COVID-19 is above what we're used to,</q> Rabasa-Lhoret said.</p>
+            <p>People with diabetes are already more at risk of experiencing severe outcomes if they contract 
+            COVID-19, and now the virus may be putting people more at risk of developing diabetes — 
+            a connection that an article in the <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2018688">
+            New England Journal of Medicine</a> described as <q>a bidirectional relationship.</q></p>
+            <p>So why is this happening? Doctors and researchers are investigating, but a specific reason 
+            hasn’t been pinpointed yet.</p>
+            <p>Among the theories is that this could be a side effect of a steroid used to treat COVID-19.</p>
+            <p>Zilbermint said that patients who experience complications due to COVID-19 frequently receive 
+            a steroid medication called Dexamethasone.</p>
+            <p><q>[It’s] our standard therapy for those who have low oxygen levels, and the side effect of 
+            this medication is high sugar levels, or diabetes,</q> he said. <q>So it's possible that the 
+            medications they use to treat COVID may also contribute to increased risk of developing diabetes.</q></p>
+            <p>Kunkel said he was on a round of steroids for an entire month, and now he’s unsure if this 
+            contributed to his diagnosis.</p>
+            <p><q>I had three rounds, so that could have elevated and caused it,</q> he said. 
+            <q>So there's all of these really unknowns.</q></p>
+            <p>There are also signs that the novel coronavirus itself could affect the body in ways 
+            that would cause them to develop diabetes.</p>
+            <p><q>There are some suggestions that COVID-19 could go directly in the cells which produce 
+            insulin, in the pancreas, and damage them,</q> Rabasa-Lhoret said.</p>
+            <p>Zilbermint added that the virus may be able to change the way that cells metabolize glucose itself.</p>
+            <p>Acute onset of diabetes was also reported more among patients with SARS a decade ago, he said, 
+            <q>compared to those without the SARS pneumonia, […] which I think is important to mention.</q></p>
+            <p>Another thought is that perhaps it’s that the infection tips people who are at risk of 
+            developing diabetes into a diagnosis sooner.</p>
+            <p><q>It's possible that [a] patient lives with pre-diabetes for many years and didn't know that,</q> 
+            Zilbermint said. <q>Now they have COVID-19 infection, and the infection is pushing them towards developing diabetes.</q></p>
+            <p>That’s something Kunkel has considered.</p>
+            <p><q>It could be that, OK, I was on the verge of getting diabetes, and COVID-19 actually pushed it over 
+            the edge,</q> he said.</p>
+            <p>Some doctors wonder if it’s a new form of diabetes altogether.</p>
+            <p>In Type 1 diabetes, patients’ immune system destroys beta cells that produce insulin.</p>
+            <p>However, COVID-19 patients who develop diabetes can also exhibit insulin resistance which is found in Type 2 diabetes. 
+            (Insulin resistance is when cells are <q>resistant</q> to the hormone insulin, and as a result can’t use glucose. 
+            The pancreas produces more insulin and blood sugar spikes.)</p>
+            <p>Some doctors believe the sudden-onset diabetes after a COVID-19 infection may be a novel condition which 
+            features both Type 1 and Type 2 diabetes.</p>
+            <p><q>The main question is, is this going to be transient, or is this going to be permanent?</q> 
+            Rabasa-Lhoret said. <q>And on the short term, we don't know.</q></p>
+            <p>It’s the questions that haunt patients like Kunkel, as well as the doctors who treat these patients.</p>
+            <p>But work is being done to figure out what is going on, and how best to treat patients.</p>
+            <p><q>A number of endocrinology specialists and diabetes experts around the world are looking into this,</q> 
+            Zilbermint said.</p>
+            <p><q>For example, my colleagues at the King's College in London and U.K. already established a robust 
+            database where all the researchers, clinicians, doctors can submit the information about their patients 
+            into a global registry.</q></p>
+            <p>This <a href="http://covidiab.e-dendrite.com/">new global database</a> will try to collect all the cases 
+            in a bid to understand whether the coronavirus infection truly has yet another nasty side effect.</p>
+            <p><q>I'm sure we'll see more research studies coming out of this registry in the coming months,</q> 
+            Zilbermint said.</p>
+            <h2>RELATED IMAGES</h2>
+            <img src="https://www.ctvnews.ca/polopoly_fs/1.5318415.1613960245!/httpImage/image.jpg_gen/derivatives/landscape_960/image.jpg" alt="COVID">
+            <p><small>COVID</small></p>
+            <hr>
+        </article>
+        <aside>
+            <img src="https://www.ctvnews.ca/polopoly_fs/1.4894138.1586802357!/httpImage/image.png_gen/derivatives/3x1_300/image.png">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+            <hr>
+        </aside>
         
     </body>
 
