Added index for the 7th week, modified readme, styles and index(6th week)

--- a/Semana 7/index.html
+++ b/Semana 7/index.html
@@ -86,7 +86,7 @@
                 <a id="highlight-blue" href="https://www.ctvnews.ca/health/coronavirus">Coronavirus</a><span id="article-news"> | News</span>
             </div>
             <h1>
-                A new COVID-19 side effect? Some patients are developing sudden onset diabetes
+                AstraZeneca: U.S. data shows COVID-19 vaccine effective for all ages
             </h1>
             <address>
                 <div class="author">
