Modified index(6th week), index(7th week) and styles

--- a/Semana 6/index.html
+++ b/Semana 6/index.html
@@ -135,6 +135,9 @@
                 bellmediaglobalprod&siteName=CTVNews&cid=%5B%7B%22contentId%22%3A2160231%2C%22ad%22%3A%7B%22adsite%22%3A%22ctv.ctvnews%22%2C%22adzone%22%3A%22embed%22%7D%7D%5D" 
                 width="783.25" height="440.58"frameborder="0" allowfullscreen>
             </iframe>
+            <div id="video-side">
+                <img src="img/video-side.png">
+            </div>
             <div class="main-area">
                 <div class="share-links">
                     <p>SHARE: 
