Added links to move between the news

--- a/Semana 6/index.html
+++ b/Semana 6/index.html
@@ -464,6 +464,9 @@
                         <span class="material-icons">title</span> Why you can trust CTV News
                     </a>
                 </div>
+                <div id="link-week">
+                    <p><a href="../Semana 7/index.html">Click here to go to week 7's assignment!</a></p>
+                </div> 
                 <div id="more-news">
                     <div class="container-more">
                         <h2>
@@ -669,7 +672,7 @@
                             </div>        
                         </div>
                     </div>
-                </div>        
+                </div>
             </div>
             <aside>
                 <div class="ad">
