--- a/Semana 7/index.html
+++ b/Semana 7/index.html
@@ -398,6 +398,9 @@
                         <span class="material-icons">title</span> Why you can trust CTV News
                     </a>
                 </div>
+                <div id="link-week">
+                    <p><a href="../Semana 6/index.html">Click here to go to week 6's assignment!</a></p>
+                </div>
                 <div id="more-news">
                     <div class="container-more">
                         <h2>
