Modified new's title

--- a/Semana 7/index.html
+++ b/Semana 7/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
-        <title>Coronavirus: Some COVID-19 patients are developing sudden onset diabetes | Rosario Post</title>
+        <title>Coronavirus: AstraZeneca says U.S. trial data shows vaccine 79 per cent effective | Rosario Post</title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/font.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
